[ftp] Claim that dir is writable during stat

This isn't really correct, but neither is saying it's not writable

Without this CopyJob will refuse to work, at least since 15fff1b8592648f11f20a303c8f82d61d3f19584

BUG: 510456
(cherry picked from commit eaaf877aed31c0d7483fd2a1bccbe06df0e6c0a6)